<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/location_list_layout"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:id="@+id/location_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location_latitude"
                android:text="@string/latitude"
                android:layout_below="@id/location_title"
                android:textColor="@color/teal_700"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:id="@+id/location_longitude"
                android:layout_below="@id/location_title"
                android:layout_toEndOf="@id/location_latitude"
                android:textColor="@color/teal_700"
                android:layout_marginStart="50dp"
                android:layout_marginTop="2dp"
                android:textSize="14sp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>